# fiduciary

./: .gitattributes  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  NOTICE  README.md  REPRODUCING.md  SECURITY.md  VERSIONS.md  constraints.txt  index.html  pyproject.toml
.github/: pull_request_template.md
data/: DATASHEET.md  croissant.json  taxonomy.yaml
docs/: 01-vision-and-thesis.md  02-landscape-and-gap.md  03-taxonomy.md  04-synthetic-enterprise-and-scenarios.md  05-evaluation-framework.md  06-scope-and-roadmap.md  07-trust-and-standardization.md  08-risks-and-kill-criteria.md  09-next-actions.md  10-measurement-standards.md  11-standards-map.md  release-checklist.md  threats-to-validity.md
papers/: README.md  paper1-taxonomy.md  paper2-methodology.md  paper3-results.md
rate/: index.html  share.html
references/: README.md  references.bib
reliability/: PILOT-RUNBOOK.md  PREREGISTRATION.md
research/: README.md  landscape-review.md  landscape.csv
scripts/: add_canary.py  generate_customers.py  inter_judge_agreement.py  make_croissant.py
standards/: README.md  crosswalk.yaml
tests/: test_aggregate.py  test_cli_report_gate.py  test_croissant.py  test_crosswalk.py  test_customers.py  test_e2e.py  test_exemplars.py  test_judge.py  test_layer1.py  test_models.py  test_reliability.py  test_report.py  test_report_ci.py  test_report_crosswalk.py  test_runner.py  test_scenarios.py  test_schemas.py  test_smoke.py  test_stats.py  test_taxonomy.py  test_world.py  test_world_content.py
(+137 files in other folders)
