[project]
name = "fiduciary"
version = "0.1.0"
description = "Fiduciary: enterprise deployment-readiness benchmark for AI in regulated banking"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "litellm>=1.40",
    "scikit-learn>=1.4",
    "krippendorff>=0.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
fiduciary = "fiduciary.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
